Lot's of changes - Changed visual style of buttons and menu's - Entire board can now move around on scene - Introduced a lot of bugs (temporary) - Removed a bunch of features (temporary) - Moved `App::X_menu` and `App::X_panel` to `ui` - Moved all in `preset_placer` to `ui` - Added `graphics::Transform` to tidy up graphics code - Added `settings::Theme`to replace "dark_mode" - Renamed module `native/input` to `native/files` - Renamed module `preset` to `presets` - Renamed module `integration` to `input` - Renamed module `scene` to `board` - Renamed struct `Scene` to `Board` - Renamed struct `Presets` to `Library` - Moved all in `scene::chip` to `scene` - Updated CHANGELOG

--- a/web/site/index.html
+++ b/web/site/index.html
@@ -38,7 +38,7 @@
 <body>
 	<p id="loading_msg"></p>
 	<canvas id="app"></canvas>
-	<script src="log_sim_gui_web.js" type="text/javascript"></script>
+	<script src="logsim_web.js" type="text/javascript"></script>
 	<script>
 		const LOADING_MSG = "Downloading WASM";
 		const LOADING_ERR_MSG = "Failed to download WASM (try Shift + Ctrl(⌘) + R)";
@@ -63,7 +63,7 @@
 		
 		update_loading_msg();
 		
-		wasm_bindgen("./log_sim_gui_web_bg.wasm").then(on_wasm_loaded).catch(on_wasm_err);
+		wasm_bindgen("./logsim_web_bg.wasm").then(on_wasm_loaded).catch(on_wasm_err);
 		function on_wasm_err(err) {
 			stop_loading(false);
 			console.error(err);
